# Website-Generator

./: .gitattributes  .gitignore  Cargo.toml  README.md
backend/build_stuff/build_process/: Cargo.toml  README.md
backend/build_stuff/build_process/src/: build_process.rs  lib.rs
backend/build_stuff/cli_handler/: Cargo.toml  README.md
backend/build_stuff/file_handling/: Cargo.toml
backend/build_stuff/markdown_backend_utilities/: Cargo.toml
backend/build_stuff/program_manager/: Cargo.toml  README.md
backend/markdown_element_lib/: Cargo.toml  README.md  index.html
backend/markdown_element_lib/src/: lib.rs  markdown_inline_element.rs  markdown_line_element.rs  markdown_page.rs
backend/markdown_renderer/: README.md  index.html  pubspec.yaml
backend/markdown_renderer/lib/: markdown_renderer.dart
backend/markdown_renderer/test/: markdown_renderer_test.dart
backend/test_launch/: pubspec.yaml
backend/test_launch/lib/: main.dart
backend/test_launch/linux/: CMakeLists.txt
backend/test_launch/web/: index.html
backend/test_launch/windows/: CMakeLists.txt
frontend/demo_websites/rebuild_forge/: about.md  config.json  ethos.md  overview.md  tech_stack.md
frontend/demo_websites/website_generator/: about.md  config.json  index.txt  overview.md  tech_stack.md
frontend/markdown_element_lib/: README.md  pubspec.yaml
frontend/markdown_element_lib/lib/: markdown_element_lib.dart
frontend/markdown_element_lib/test/: markdown_element_lib_test.dart
frontend/markdown_element_style_lib/: README.md  pubspec.yaml
src/: main.rs
(+136 files in other folders)
