[package]
name = "build_process"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
markdown_element_lib = { path = "../../markdown_element_lib" }
markdown_backend_utilities = { path = "../markdown_backend_utilities" }
file_handling = { path = "../file_handling" }
